--- a/tardis/tardis_portal/templates/tardis_portal/javascript_libraries.html
+++ b/tardis/tardis_portal/templates/tardis_portal/javascript_libraries.html
@@ -32,6 +32,7 @@ Use the unminified jquery-migrate.js to see deprecation warnings in your browser
 
 <script type="text/javascript" src="{% static 'underscore/underscore-min.js' %}"></script>
 <script type="text/javascript" src="{% static 'underscore.string/dist/underscore.string.js' %}"></script>
+<script type="text/javascript" src="{% static 'sprintf-js/dist/sprintf.min.js' %}"></script>
 
 <!-- Backbone.js -->
 <script type="text/javascript" src="{% static 'backbone/backbone-min.js' %}"></script>
