Move JS out of view_dataset template so it can be linted and tested

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -40,7 +40,7 @@
     placeholder='Search: Enter part or all of a filename, then press enter.'
     type="text"
     name="filename"
-    onkeypress="javascript:filename_search_handler(event)"
+    onkeypress="javascript:filenameSearchHandler(event)"
     value="{{filename_search|default:''}}" />
 </p>
 
