--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -5,278 +5,8 @@
 {% load basiccomparisonfilters %}
 
 {% block script %}
-<script type="text/javascript">
-    var loadingHTML = $('<img src="{% static 'images/ajax-loader.gif' %}"/><br />');
-
-    var shown_datafile_href = "";
-    var prev_file_select = null;
-
-    // file selectors
-    jQuery(document).on('click', '.dataset_selector_all', function() {
-        $(this).parents('.datafiles').find('.datafile_checkbox').attr("checked", "checked");
-    });
-    jQuery(document).on('click', '.dataset_selector_none', function() {
-        $(this).parents('.datafiles').find('.datafile_checkbox').removeAttr("checked");
-    });
-
-    function get_new_parameter_name(name)
-    {
-        var new_name = name;
-
-        var i = 1;
-        while($("[name=" + new_name + "__" + i + "]").length == 1)
-        {
-            i++;
-        }
-        return new_name + "__" + i;
-    }
-
-    function get_form_input_html(label, name, use_textarea)
-    {
-        var widget;
-        if (use_textarea) {
-            widget = '<textarea ' + 'name="' + name + '" id="' + name + '"/>';
-        } else {
-            widget = '<input type="text" name="' + name + '" value="" id="' + name + '" />';
-        }
-        var label = '<label for="' + name + '">' + label + '</label>';
-        return '<div class="form-group">' + label + '<br/>' + widget + '</div>';
-    }
-
-    $(document).on('change', '#schemaselect', function(e) {
-        e.preventDefault();
-
-        var $this = $(this);
-        var $jqm_content_div = $this.closest('.modal-body');
-
-        var type = $this.attr('data-type');
-        var parent_object_id = $this.attr('data-parent_object_id');
-        var href = "/ajax/add_" + type + "_parameters/" + parent_object_id + "/?schema_id=" + $this.val();
-        $.get(href, function(data) {
-            $jqm_content_div.html(data);
-        });
-        return false;
-    });
-
-    $(document).on('click', '#add_new_parameter', function(){
-        // assuming whenever add_new_parameter is clicked an option is selected
-        var $selected_option = $("#parameternameselect > option:selected");
-        var is_long = $selected_option.attr('data-longstring');
-        var new_element_name = get_new_parameter_name($selected_option.val());
-
-        if($selected_option.text())
-        {
-            $("#parameternameselect").before(get_form_input_html($selected_option.text(), new_element_name, is_long));
-            $("#" + new_element_name).focus();
-        }
-        else
-        {
-            alert('There are no parameters allowed to be added by users in this schema');
-        }
-    });
-    $(document).on('submit', '#add_metadata_form', function(e) {
-        e.preventDefault();
-
-        var form = $(this);
-        var contentContainer = form.closest('.modal-body')
-
-        var schema_id = $('#schemaselect').val();
-        var type = form.attr('data-type');
-        var parent_object_id = form.attr('data-parent_object_id');
-        var href = "/ajax/add_" + type + "_parameters/" + parent_object_id + "/?schema_id=" + schema_id;
-
-        $.ajax({
-          type: 'POST',
-          url: href,
-          data: form.serialize(),
-          success: function(data) {
-                  contentContainer.html(data);
-                  if (contentContainer.find('form').length == 0) {
-                    contentContainer.parents('.modal').find('.modal-footer').hide();
-                }
-            },
-          async:false
-        });
-
-        // Hide the form buttons
-        form.parents('.modal').find('.modal-footer').hide();
-
-        $('#metadata-pane').trigger('reload');
-
-        return false;
-    });
-    $(document).on('submit', '#edit_metadata_form', function(e) {
-        e.preventDefault();
-        var form = $(this);
-        var contentContainer = form.closest('.modal-body')
-
-        $.ajax({
-          type: 'POST',
-          url: form.attr('action'),
-          data: form.serialize(),
-          success: function(data) {
-                  contentContainer.html(data);
-                  if (contentContainer.find('form').length == 0) {
-                    contentContainer.parents('.modal').find('.modal-footer').hide();
-                }
-            },
-          async:false
-        });
-
-        // Hide the form buttons
-        form.parents('.modal').find('.modal-footer').hide();
-        $('#metadata-pane').trigger('reload');
-
-        return false;
-    });
-
-    // datafile metadata
-    $(document).on('click', '#datafiles-pane .datafile-info-toggle', function(evt){
-        evt.preventDefault();
-        var $this = $(this);
-        var $datafile_metadata_container =
-          $('#datafile-info');
-
-        $datafile_metadata_container.toggle();
-
-        if(prev_file_select)
-        {
-            prev_file_select.removeClass("file-select");
-        }
-
-        var file_select = $this.parents('tr.datafile');
-        file_select.addClass("file-select");
-        prev_file_select = file_select;
-
-        var href = $this.attr("href");
-        $datafile_metadata_container.html(loadingHTML);
-        $datafile_metadata_container.load(href);
-        shown_datafile_href = href
-        $datafile_metadata_container.show();
-
-    });
-
-    var loadModalRemoteBody = function(trigger, modal) {
-      // Hide save buttons
-      $(modal).find('.modal-footer').hide();
-      // Fill with "loading" placeholder content
-      $(modal).find('.modal-body').html(
-        $(modal).find('.loading-placeholder').html()
-      );
-      $(modal).modal('show');
-      $.ajax({
-        url: $(trigger).attr('href'),
-        success: function (data, textStatus, jqXHR) {
-          $(modal).find('.modal-body').html(data);
-          $(modal).find('.modal-footer').show();
-        }
-      });
-    };
-
-    $(document).on('click', '.add-metadata', function(evt){
-        evt.preventDefault();
-        $('#modal-metadata .modal-header .title').text("Add Metadata");
-        loadModalRemoteBody(this, '#modal-metadata');
-    });
-    $(document).on('click', '.edit-metadata', function(evt) {
-        evt.preventDefault();
-        $('#modal-metadata .modal-header .title').text("Edit Metadata");
-        loadModalRemoteBody(this, '#modal-metadata');
-    });
-
-    $(document).on('click', '#request-fast-access', function(evt){
-        evt.preventDefault();
-        var modal = '#modal-retrieve-files';
-        $(modal).find('.modal-footer').hide();
-        // Fill with "loading" placeholder content
-        $(modal).find('.modal-jobid').html(
-                $(modal).find('.loading-placeholder').html()
-        );
-        $(modal).modal('show');
-        $.ajax({
-            url: $(this).attr('href'),
-            success: function (data, textStatus, jqXHR) {
-                $(modal).find('.modal-jobid').html(data["result"]);
-            }
-        });
-    });
-
-    $(document).on('click', '.pagelink', function( event ){
-        var href = $(this).attr("href");
-        var html = $(this).html();
-        $(this).html(loadingHTML);
-        $('#datafiles-pane').load(href, function(){
-            $(".dataset_selector_all").unbind('click');
-            $(".dataset_selector_none").unbind('click');
-            // file selectors
-            $(document).find('.dataset_selector_all').on("click", function() {
-                $(this).parent().find('.datafile_checkbox').attr("checked", "checked");
-
-            });
-
-            $(document).find('.dataset_selector_none').on("click", function() {
-                $(this).parent().find('.datafile_checkbox').removeAttr("checked");
-
-            });
-        });
-        return false;
-    });
-
-  function filename_search_handler(e) {
-    // Only care about "Enter" key
-    if (e.keyCode != 13) return;
-    // Disable form submit - we'll do that ourselves
-    e.preventDefault();
-    // Build form submission, and reload pane with results
-    var form = $('#filename-search');
-    $.ajax({
-      'url': form.attr('data-action'),
-      'type': form.attr('data-method'),
-      'data': form.children('input').serialize(),
-      'success': function(data) {
-        $('#datafiles-pane').html(data);
-      }
-    });
-    // Show loading indicator
-    $('#datafiles-pane').html(loadingHTML);
-  }
-
-  $(document)
-      .on(
-        'click',
-        "input[name$='show_search']",
-          function() {
-            var show_search = $(this).val();
-            $('.datafile-pane')
-                .each(
-                    function() {
-                      var dataset_id = $(this).find('.dataset_id').val();
-                      var params = [];
-                      var toggle = $(this).siblings('.datafile-list-toggle');
-                      var loadHtml = "<img src='{% static "images/ajax-loader.gif"%}'/><br />";
-
-                      html = $(this).siblings('.datafile-list-toggle').attr(
-                          'href')
-                      if (show_search == "matches") {
-                        html = html + '&limit=true'
-                      } else {
-                        html = html.replace('&limit=true', '')
-                      }
-                      toggle.attr('href', html);
-
-                      if (toggle.hasClass('files_shown')) {
-                        $(this).html(loadHtml);
-                        $(this).load(html);
-                      }
-                    });
-            if ($(this).val() == "matches") {
-              $(".dataset").hide();
-              $(".search_match").show();
-              $(".datafile_match").show();
-            } else {
-              $(".dataset").show();
-            }
-          });
+<script type="text/javascript"
+        src="{% static 'js/jquery/tardis_portal/view_dataset/init.js' %}">
 </script>
 <style type="text/css">
 .dropzone.in {
@@ -300,6 +30,7 @@
 
 <div id="upload_button_code" style="display: none"></div>
 
+<input type="hidden" id="dataset-id" value="{{ dataset.id }}">
 <script type="text/javascript">
 $(document).on('click', '#modal-metadata .submit-button', function() {
   $('#modal-metadata .modal-body form').submit();
@@ -620,55 +351,12 @@ margin-top: 20px;
 </div>
 
 {% block finalscript %}
-<script type="text/javascript">
-$(document).ready(function(){
-
-  // Create a reload event handler
-  $('#metadata-pane').on('reload', function() {
-    $(this).load('{% url 'tardis.tardis_portal.views.retrieve_dataset_metadata' dataset.id %}');
-    if(prev_file_select)
-    {
-        $('#datafile-info').load(prev_file_select.find('.datafile-info-toggle').attr('href'));
-    }
-  });
-
-  // load datafiles on page load
-  $('#datafiles-pane').load('{% url 'tardis.tardis_portal.views.retrieve_datafile_list' dataset.id %}');
-
-  // Create a reload event handler
-  $('#datafiles-pane').on('reload', function() {
-    $(this).load('{% url 'tardis.tardis_portal.views.retrieve_datafile_list' dataset.id %}', function () {
-      var datafileCount = parseInt($('#datafile-count').val());
-      var fileCountString = "" + datafileCount + " File";
-      if (datafileCount != 1) {
-          fileCountString += "s"
-      }
-      $('#total-count').html(fileCountString);
-      // Reset progress bar after datafiles-pane has reloaded:
-      $('#progress .progress-bar').css('width', '0%');
-    });
-  });
-
-  // Reload data file list when we close the upload modal
-  $('#modal-upload-files').on('hide', function() {
-    $('#datafiles-pane').trigger('reload');
-    // Also reload metadata (as it may have been created by the upload)
-    $('#metadata-pane').trigger('reload');
-  })
-
-  // Set up carousel
-  $('.carousel').carousel({
-    'interval': 2000
-  });
-  // Set carousel size
-  $('#preview, #preview .carousel-inner').css('width', '320')
-                                         .css('height', '240');
-
+<input type="hidden" id="upload-method" value="{{ upload_method }}">
 {% if upload_method %}
-$("#upload_button_code").load('{% url upload_method dataset.id %}');
+  <input type="hidden" id="upload-method-url" value="{% url upload_method dataset.id %}">
 {% endif %}
-
-});
+<script type="text/javascript"
+        src="{% static 'js/jquery/tardis_portal/view_dataset/ready.js' %}">
 </script>
 <!-- jQuery UI widgets -->
 <script src="{% static 'blueimp-file-upload/js/vendor/jquery.ui.widget.js' %}"></script>
@@ -676,89 +364,9 @@ $("#upload_button_code").load('{% url upload_method dataset.id %}');
 <script src="{% static 'blueimp-file-upload/js/jquery.iframe-transport.js' %}"></script>
 <!-- The basic File Upload plugin -->
 <script src="{% static 'blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
-<script type="text/javascript">
-$(function () {
-    $('#dropzone').hide();
-    $('#fileupload').fileupload({
-        dataType: 'json',
-	headers: {'X-CSRFToken': '{{csrf_token}}'},
-        done: function (e, data) {
-          //  $.each(data.result.files, function (index, file) {
-          //      $('<p/>').text(file.name).appendTo(document.body);
-          //  });
-            $('#datafiles-pane').trigger('reload');
-            var length = data.files.length;
-            for (var i = 0; i < length; i++) {
-                showMsg.success(data.files[i].name + " was successfully uploaded");
-                // need to change notification to show multiple, not replace existing ones
-            }
-        },
-	dropZone: $('.dropzone')
-    });
-    $('#datafiles-pane').bind('drop dragover', function (e) {
-        e.preventDefault();
-    });
-    $('#fileupload').bind('fileuploadsubmit', function (e, data) {
-        var jsondata = {
-            dataset: "/api/v1/dataset/{{dataset.id}}/",
-            filename: data.files[0].name,
-            size: data.files[0].size,
-            mimetype: data.files[0].type
-        };
-        data.formData = {json_data: JSON.stringify(jsondata)};
-    }).on('fileuploadprogressall', function (e, data) {
-        var progress = parseInt(data.loaded / data.total * 100, 10);
-        $('#progress .progress-bar').css(
-            'width',
-            progress + '%'
-        );
-        if (progress === 100) {
-            setTimeout(function() {
-              $('#datafiles-pane').trigger('reload');
-            }, 500);
-        }
-    });
-});
-var showDropzone = function() {
-    $('#datafiles-pane').hide();
-    $('#dropzone').show();
-};
-var inDropzone = function() {
-
-};
-var hideDropzone = function() {
-    $('#datafiles-pane').show();
-    $('#dropzone').hide();
-};
-$(document).bind('dragover', function (e) {
-    var dropZone = $('.dropzone'),
-        timeout = window.dropZoneTimeout;
-    if (!timeout) {
-        //dropZone.addClass('in');
-        showDropzone();
-    } else {
-        clearTimeout(timeout);
-    }
-    var found = false,
-        node = e.target;
-    do {
-        if (node === dropZone[0]) {
-           found = true;
-           break;
-       }
-       node = node.parentNode;
-    } while (node != null);
-    if (found) {
-        dropZone.addClass('hover');
-    } else {
-        dropZone.removeClass('hover');
-    }
-    window.dropZoneTimeout = setTimeout(function () {
-        window.dropZoneTimeout = null;
-        //dropZone.removeClass('in hover');
-	hideDropzone();
-    }, 100);
-});
+<input type="hidden" id="csrf-token" value="{{ csrf_token }}">
+<script type="text/javascript"
+        src="{% static 'js/jquery/tardis_portal/view_dataset/file-upload.js' %}">
 </script>
 {% endblock finalscript %}
 {% endblock %}
