--- a/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
+++ b/tardis/tardis_portal/templates/tardis_portal/manage_group_members.html
@@ -5,222 +5,9 @@
 
 {% include "tardis_portal/javascript_libraries.html" %}
 
-<script type="text/javascript">
-
-$(document).ready(function() {
-
-    $(document).on('click', '.create_group_link', function(evt) {
-        var modal = $('#modal-create-group');
-
-        modal.find('.modal-body').html('');
-        modal.find('.loading-placeholder').show();
-        modal.modal('show');
-
-        modal.find('.modal-body')
-             .load("/experiment/control_panel/create/group/", function() {
-                modal.find('.loading-placeholder').hide();
-                modal.find("#error-message").parents(".alert-danger").hide();
-
-                var users = null;
-
-                $("#group.form_submit").unbind('click');
-                $("#group.form_submit").on("click", function(event) {
-                  event.preventDefault();
-
-                  var group = $(this).parents('.group_create').find("#id_addgroup").val();
-                  console.log("group = " + group);
-                  var admin = $(this).parents('.group_create').find("#id_groupadmin").val();
-                  console.log("admin = " + admin);
-
-                  get_vars = '?group=' + group + '&admin=' + admin;
-                  action = '/experiment/control_panel/create/group/' + get_vars;
-
-                  $.ajax({
-                    'async': false,
-                    'global': true,
-                    type: "GET",
-                    url: action,
-                    dataType: "text",
-                    success: function(data) {
-                        modal.modal('hide');
-                    },
-                    error: function(jqXHR, textStatus, errorThrown) {
-                        modal.find("#error-message").html(jqXHR.responseText);
-                        modal.find("#error-message").parents(".alert-danger").show();
-                    }
-                  });
-                  return false;
-                });
-
-            });
-
-    });
-
-
-    $('#modal-create-group').bind('hidden.bs.modal', function () {
-        var $target_group_list = $("#grouplist");
-        $target_group_list.html(loadingHTML + "</br>");
-        var href = "/ajax/group_list_by_user/"
-        $target_group_list.load(href);
-    });
-
-
-    $(document).on('submit', "form.add-user-form", function(evt) {
-        evt.preventDefault();
-        var form = $(this);
-        var authMethod = form.find("[name=authMethod]").val();
-        var usersuggest = form.find("[name=adduser]").val();
-        var group_id = form.find("[name=group_id]").val();
-        var users_div = form.parents('.access_list').children('.users');
-        var isAdmin = form.find("[name=admin]").is(':checked');
-        var action = '/group/' + group_id + '/add/' + usersuggest + '/?isAdmin=' + isAdmin + '&authMethod=' + authMethod;
-        $.ajax({
-          type: "GET",
-          url: action,
-          success: function(data) {
-             users_div.hide().append(data).fadeIn();
-          },
-          error: function(data) {
-             alert('Error adding user');
-          }
-        });
-    });
-    $(document).on('click', ".remove_user", function(evt) {
-        evt.preventDefault();
-
-        var access_list = $(this).parents('.access_list_user');
-
-        $.ajax({
-          'url': $(this).attr('href'),
-          'success': function (data) {
-            if (data === "OK") {
-              access_list.fadeOut(500);
-            } else {
-              alert(data);
-            }
-          }
-        });
-    });
-    //
-    // // grouplist
-      var $target_group_list = $("#grouplist");
-      $target_group_list.html(loadingHTML + "</br>");
-      var href = "/ajax/group_list_by_user/"
-      $target_group_list.load(href);
-
-    var loadingHTML = "<img src=\"{% static 'images/ajax-loader.gif' %}\"/>";
-
-    $(document).on('click', ".member_list_user_toggle", function(evt){
-        evt.preventDefault()
-
-        var icon = $(this).find('i');
-        icon.toggleClass('fa fa-folder-open');
-        icon.toggleClass('fa fa-folder');
-        $(this).toggleClass('members-shown members-hidden');
-
-        var user_list = $(this).parents('.group').find('.access_list');
-        // If not showing members, just hide user list
-        if (!$(this).hasClass('members-shown')) {
-          user_list.hide();
-          return;
-        }
-
-        user_list.html(loadingHTML);
-        // Load (jQuery AJAX "load()") and show access list
-        user_list.load(this.href, function() {
-          // Load user list and activate field autocompletion
-          $.ajax({
-            'dataType': 'json',
-            'url': '/ajax/user_list/',
-            'success': function(users) {
-              $("#id_adduser").autocomplete({
-                  'source': _.bind( function(query, callback) {
-                    var authMethod = $("#id_authMethod").val();
-                    callback(
-                        userAutocompleteHandler(
-                            query.term, this.users, authMethod));
-                  }, { 'users': users })
-              });
-            }
-          });
-        }).show();
-    });
-
-    // add user
-    $(document).on('click', '.create_user_link', function(evt) {
-        var modal = $('#modal-create-user');
-
-        modal.find('.modal-body').html('');
-        modal.find('.loading-placeholder').show();
-        modal.modal('show');
-
-        modal.find('.modal-body')
-             .load("/experiment/control_panel/create/user/", function() {
-                modal.find('.loading-placeholder').hide();
-
-                var users = null;
-
-                $("#user.form_submit").unbind('click');
-                $("#user.form_submit").on("click", function(event) {
-                  event.preventDefault();
-
-                  var username = $(this).parents('.user_create').find("#id_username").val();
-                  var email = $(this).parents('.user_create').find("#id_email").val();
-                  var password1 = $(this).parents('.user_create').find("#id_password1").val();
-                  var password2 = $(this).parents('.user_create').find("#id_password2").val();
-                  var authMethod = $(this).parents('.user_create').find("#id_authMethod").val();
-
-                  post_vars = {user: username,
-			       email: email,
-			       authMethod: authMethod,
-			       password: password1,
-			       csrfmiddlewaretoken: '{{csrf_token}}'
-			       };
-                  action = '/experiment/control_panel/create/user/'
-
-                  // returns 0 on fail
-                  var passwordMatch = password1.localeCompare(password2);
-
-                  if (!passwordMatch)
-                  {
-
-                      $.ajax({
-                        'async': false,
-                        'global': true,
-                        type: "POST",
-                        url: action,
-                        data: post_vars,
-                        success: function(data) {
-                            $("#success-message").html(data);
-                            $("#success-message").parents(".alert-success").attr('style', 'display: block;');
-                            modal.modal('hide');
-                        },
-                        error: function(data) { alert(data.responseText || 'An error has occurred'); }
-                      });
-                      return false;
-
-                }
-                else
-                {
-                    alert('Passwords do not match!');
-                }
-
-                }); // end form submit event
-
-            });
-
-    });
-
-
-    $('#modal-create-group').bind('hidden.bs.modal', function () {
-        var $target_group_list = $("#grouplist");
-        $target_group_list.html(loadingHTML + "</br>");
-        var href = "/ajax/group_list_by_user/"
-        $target_group_list.load(href);
-    });
-
-
-});
+<input type="hidden" id="csrf-token" value="{{ csrf_token }}">
+<script type="text/javascript"
+        src="{% static 'js/jquery/tardis_portal/manage_group_members/ready.js' %}">
 </script>
 {% endblock %}
 
