--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -43,7 +43,8 @@
             <tr class="datafile search_match_file">
                 <td>
                     {% if has_download_permissions and datafile.verified %}
-                        <input type="checkbox" style="" class="datafile_checkbox" name="datafile" value="{{datafile.id}}" />
+                        <input type="checkbox" style="" class="datafile_checkbox" name="datafile" value="{{datafile.id}}"
+                               {% if not datafile.is_online %}disabled{% endif %}/>
                     {% endif %}
                 </td>
                 <td>
@@ -59,12 +60,16 @@
                             <span class="datafile_name" style="color:red;">{{ datafile.filename }}</span>
                         {% endif %}
                     {% endif %}
-                    {% if datafile.verified %}
+                    {% if datafile.verified and datafile.is_online %}
                         {% if datafile.size %}<span style="margin-right: 5px">({{ datafile.size|filesizeformat }})</span>{% endif %}
+                    {% elif not datafile.is_online %}
+                        <span class="archived-file" style="margin-right: 5px;">
+                          ({{ datafile.size|filesizeformat }}) (archived)
+                        </span>
                     {% else %}
                         <span style="margin-right: 5px; color:red;">(unverified)</span>
                     {% endif %}
-                    {% if has_download_permissions and datafile.get_view_url %}
+                    {% if has_download_permissions and datafile.get_view_url and datafile.is_online %}
                         {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size=',28' rotation=0 quality='native' format='jpg' as thumbnail %}
                         {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size='full' rotation=0 quality='native' format='png' as image %}
                         {% if thumbnail and datafile.has_image %}
@@ -95,27 +100,48 @@
 
                 </td>
                 <td style="width: 130px;">
-                    <div class="btn-group pull-right">
-                        {% if has_download_permissions and datafile.verified %}
-                            <a class="btn btn-outline-secondary btn-sm py-1 {% if datafile.is_online %}" title="Download"
-                               {% else %} archived-file disabled"{% endif %}
-                               href="{{ datafile.get_download_url }}">
-                                <i class="fa fa-download fa-lg"></i>
-                            </a>
-                        {% endif %}
-                        {% if has_write_permissions and not immutable %}
-                            <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
-                               data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
-                               class="btn btn-outline-secondary btn-sm py-1 add-metadata">
-                                <i class="fa fa-plus fa-lg"></i>
-                            </a>
-                        {% endif %}
+                  <div class="btn-group pull-right">
+                    {% if has_download_permissions and datafile.verified %}
+                      {% if datafile.is_online %}
+                        <a class="btn btn-default btn-sm"
+                           title="Download"
+                           href="{{ datafile.get_download_url }}">
+                          <i class="fa fa-download fa-lg"></i>
+                        </a>
+                      {% else %}
+                        <button class="btn btn-default btn-sm recall-datafile"
+                                type="button"
+                                title="Recall"
+                          {% if datafile.get_recall_url %}
+                                data-toggle="tooltip"
+                                data-recall-url={{ datafile.get_recall_url }}
+                                style="pointer-events: auto;"
+                          {% else %}
+                                disabled
+                          {% endif %}
+                        >
+                          <i class="fa fa-undo fa-lg"></i>
+                        </button>
+                      {% endif %}
+                    {% endif %}
+                    {% if has_write_permissions and not immutable %}
+                        <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
+                           data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
+                           class="btn btn-default btn-sm add-metadata">
+                            <i class="fa fa-plus fa-lg"></i>
+                        </a>
+                    {% endif %}
 
                         <a id="datafile_metadata_toggle_{{datafile.id}}" title="Show/Hide Metadata"
                            class="btn btn-outline-secondary btn-wm py-1 datafile-info-toggle metadata_hidden" href="/ajax/datafile_details/{{datafile.id}}/">
                             <i class="fa fa-list fa-lg"></i>
                         </a>
                     </div>
+                    <a id="datafile_metadata_toggle_{{datafile.id}}" title="Show/Hide Metadata"
+                       class="btn btn-default btn-sm datafile-info-toggle metadata_hidden" href="/ajax/datafile_details/{{datafile.id}}/">
+                        <i class="fa fa-list fa-lg"></i>
+                    </a>
+                  </div>
                 </td>
             </tr>
         {% endfor %}
@@ -123,5 +149,11 @@
 </tbody>
 </table>
 </form>
+
+{% block script %}
+<script type="text/javascript"
+        src="{% static 'js/jquery/tardis_portal/ajax/datafile_list.js' %}">
+</script>
+{% endblock %}
 
 {{ paginator_block }}
