--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -383,6 +383,7 @@
     </div>
 </div>
 {% block finalscript %}
+<input type="hidden" id="datafile-count" value="{{datafile_count}}"/>
 <input type="hidden" id="upload-method" value="{{ upload_method }}">
 {% if upload_method %}
   <input type="hidden" id="upload-method-url" value="{% url upload_method dataset.id %}">
