Make the datafile-count hidden input available to the whole view_dataset DOM, not just the datafile_list section.  The datafile-count input's value is used in jQuery code.

--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -351,6 +351,7 @@ margin-top: 20px;
 </div>
 
 {% block finalscript %}
+<input type="hidden" id="datafile-count" value="{{datafile_count}}"/>
 <input type="hidden" id="upload-method" value="{{ upload_method }}">
 {% if upload_method %}
   <input type="hidden" id="upload-method-url" value="{% url upload_method dataset.id %}">
