--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -352,6 +352,7 @@ margin-top: 20px;
 
 {% block finalscript %}
 <input type="hidden" id="datafile-count" value="{{datafile_count}}"/>
+<input type="hidden" id="hsm-enabled" value="{{hsm_enabled}}"/>
 <input type="hidden" id="upload-method" value="{{ upload_method }}">
 {% if upload_method %}
   <input type="hidden" id="upload-method-url" value="{% url upload_method dataset.id %}">
