Faster loading of datafiles list using Javascript instead of Django template logic

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameters.html
@@ -14,8 +14,8 @@
 
     <div class="btn-group pull-right">
       {% if has_download_permissions and datafile.is_online %}
-      <a  class="btn btn-outline-secondary"
-          href="{{ datafile.get_download_url }}"
+      <a  class="btn"
+          href="{{ datafile.download_url }}"
           title="Download">
           <i class="fa fa-download fa-lg"></i>
       </a>
