--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -69,63 +69,12 @@
                     {% else %}
                         <span style="margin-right: 5px; color:red;">(unverified)</span>
                     {% endif %}
-                    {% if has_download_permissions and datafile.get_view_url and datafile.is_online %}
-                        {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size=',28' rotation=0 quality='native' format='jpg' as thumbnail %}
-                        {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size='full' rotation=0 quality='native' format='png' as image %}
-                        {% if thumbnail and datafile.has_image %}
-
-                            {# TODO: Should include a function call to 'encodeLiveAction('imgIcon');' as images need to be bound for functionality. #}
-                            {# Calling in this file does not work with code in 'view_full_dataset.html'. Stopped working when code in file #}
-                            {# was placed in Django Inheritance blocks ("finalscript"); worked fine when defined out of that block. #}
-                            <a href="#">
-                                <img class="imgIcon"
-                                     alt="Preview image for Datafile #{{ datafile.id }}"
-                                     src="{{ thumbnail }}"
-                                     title = "view"
-                                     target = "_blank"
-                                     data-fileSize = "{{datafile.size|filesizeformat}}"
-                                     data-fullRes = "{{ image }}"
-                                     data-createdTime = '{{ datafile.created_time|time:"H:i" }}'
-                                     data-createdDate = '{{ datafile.created_time|date:"d-m-Y" }}'
-                                     data-imgId = "{{ datafile.id }}"
-                                     data-fileName = "{{ datafile.filename }}"
-                                     data-imgAmount = "{{ datafiles.object_list|length }}"
-                                     style="display: block; margin-left: 0; margin-right: 0;"
-                                     onerror="$(this).hide()"
-                                     id= "imgIcon-{{ forloop.counter }}"
-                                        />
-                            </a>
-                        {% endif %}
-                    {% endif %}
-
                 </td>
                 <td style="width: 130px;">
-                  <div class="btn-group pull-right">
-                    {% if has_download_permissions and datafile.verified %}
-                      {% if datafile.is_online %}
-                        <a class="btn btn-default btn-sm"
-                           title="Download"
-                           href="{{ datafile.get_download_url }}">
-                          <i class="fa fa-download fa-lg"></i>
-                        </a>
-                      {% else %}
-                        <button class="btn btn-default btn-sm recall-datafile"
-                                type="button"
-                                title="Recall"
-                          {% if datafile.get_recall_url %}
-                                data-toggle="tooltip"
-                                data-recall-url={{ datafile.get_recall_url }}
-                                style="pointer-events: auto;"
-                          {% else %}
-                                disabled
-                          {% endif %}
-                        >
-                          <i class="fa fa-undo fa-lg"></i>
-                        </button>
-                      {% endif %}
-                    {% endif %}
+                  <div id="datafile-buttons-{{datafile.id}}" class="btn-group pull-right">
                     {% if has_write_permissions and not immutable %}
-                        <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
+                        <a title="Add Metadata"
+                           href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
                            data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
                            class="btn btn-default btn-sm add-metadata">
                             <i class="fa fa-plus fa-lg"></i>
@@ -138,18 +87,19 @@
                         </a>
                     </div>
                     <a id="datafile_metadata_toggle_{{datafile.id}}" title="Show/Hide Metadata"
-                       class="btn btn-default btn-sm datafile-info-toggle metadata_hidden" href="/ajax/datafile_details/{{datafile.id}}/">
+                       class="btn btn-default btn-sm datafile-info-toggle metadata_hidden"
+                       href="/ajax/datafile_details/{{datafile.id}}/">
                         <i class="fa fa-list fa-lg"></i>
                     </a>
                   </div>
                 </td>
             </tr>
         {% endfor %}
-
 </tbody>
 </table>
 </form>
 
+<input type="hidden" id="page-number" value="{{ datafiles.number }}">
 {% block script %}
 <script type="text/javascript"
         src="{% static 'js/jquery/tardis_portal/ajax/datafile_list.js' %}">
