--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 {% load facility_tags %}
 {% load approved_user_tags %}
 <html lang="en"
@@ -24,13 +25,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
-    {% include "tardis_portal/javascript_libraries.html" %}
-
+    {% render_bundle 'main' %}
     {% block script %}
     {% endblock script %}
 
     <script type="text/javascript">
     // Set active nav button
+    console.log($.fn.jquery)
     $(function() {
         var data = false;
         if(window.location.pathname.match("^\/experiment")
@@ -297,8 +298,6 @@
 
     </div>
     <!-- /container -->
-    <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'bootstrap-3-typeahead/bootstrap3-typeahead.min.js' %}"></script>
     {% if ga_enabled %}
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m) {
