--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -28,7 +28,12 @@
     {% render_bundle 'main' %}
     {% block script %}
     {% endblock script %}
-
+    <style>
+      body {
+        /* 60px to make the container go all the way to the bottom of the topbar */
+        padding-top: 60px;
+      }
+    </style>
     <script type="text/javascript">
     // Set active nav button
     console.log($.fn.jquery)
