--- a/tardis/tardis_portal/templates/tardis_portal/my_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/my_data.html
@@ -1,5 +1,6 @@
 {% extends "tardis_portal/portal_template.html" %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 {% load experiment_tags %}
 {% load experimentstats %}
 {% load humanize %}
@@ -7,7 +8,7 @@
 {% load capture %}
 
 {% block content %}
-
+ {% render_bundle 'main' %}
 <div id="content">
   <div class="row">
     <div class="col-md-9">
