--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -22,7 +22,8 @@
 {% if has_download_permissions or has_write_permissions %}
 
   {% if has_write_permissions and not experiment.is_publication %}
-  <a class="add-dataset btn btn-default btn-xs pull-right"
+  <a id="add-dataset"
+     class="add-dataset btn btn-default btn-xs pull-right"
      href="{% url 'tardis.tardis_portal.views.add_dataset' experiment.id %}">
     <i class="fa fa-plus"></i>
     Add New
