--- a/tardis/tardis_portal/templates/tardis_portal/login.html
+++ b/tardis/tardis_portal/templates/tardis_portal/login.html
@@ -15,7 +15,7 @@
 {% else %}
 
   <div class="col-md-7">
-    <form class="form-horizontal" action method="post">
+    <form id="login-form" class="form-horizontal" action method="post">
       {% csrf_token %}
       <legend>Please Log In</legend>
       <input name="next_page" type="hidden" value="{{ next_page|default:"/" }}" />
@@ -37,7 +37,8 @@
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-2">
-            <button type="submit" class="form-control btn btn-info"
+            <button id="login-button"
+                    type="submit" class="form-control btn btn-info"
                     style="min-width: 80px; max-width: 200px;">
             <i class="fa fa-sign-in"></i> Log In
           </button>
