--- a/tardis/tardis_portal/templates/tardis_portal/ajax/share.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/share.html
@@ -1,14 +1,13 @@
 {% load static from staticfiles %}
 {% load experiment_tags %}
+{% load render_bundle from webpack_loader %}
 {% block script %}
-<script type="text/javascript"
-        src="{% static 'js/jquery/tardis_portal/ajax/share.js' %}">
-</script>
 {% endblock %}
 {% block content %}
 
 <!-- Scripts -->
 {% load jstemplate %}
+{% render_bundle 'tardis_portal_view_experiment' %}
 {% mustachejs "tardis_portal/license_selector" %}
 {% mustachejs "tardis_portal/rights_update_message" %}
 {% mustachejs "tardis_portal/ajax_error" %}
