--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -26,7 +26,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     {% render_bundle 'main' %}
-    {% render_bundle 'vendors~main' %}
+    {% render_bundle 'lib' %}
     {% block script %}
     {% endblock script %}
     <style>
