--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -1,13 +1,12 @@
 {% extends "tardis_portal/portal_template.html" %}
 {% load static from staticfiles %}
+{% load render_bundle from webpack_loader %}
 {% load capture %}
 {% load dataset_tags %}
 {% load basiccomparisonfilters %}
 
 {% block script %}
-<script type="text/javascript"
-        src="{% static 'js/jquery/tardis_portal/view_dataset/init.js' %}">
-</script>
+{% render_bundle 'tardis_portal_view_dataset' %}
 <style type="text/css">
 .dropzone.in {
     background: blue;
@@ -355,18 +354,6 @@ margin-top: 20px;
 {% if upload_method %}
   <input type="hidden" id="upload-method-url" value="{% url upload_method dataset.id %}">
 {% endif %}
-<script type="text/javascript"
-        src="{% static 'js/jquery/tardis_portal/view_dataset/ready.js' %}">
-</script>
-<!-- jQuery UI widgets -->
-<script src="{% static 'blueimp-file-upload/js/vendor/jquery.ui.widget.js' %}"></script>
-<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-<script src="{% static 'blueimp-file-upload/js/jquery.iframe-transport.js' %}"></script>
-<!-- The basic File Upload plugin -->
-<script src="{% static 'blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
 <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
-<script type="text/javascript"
-        src="{% static 'js/jquery/tardis_portal/view_dataset/file-upload.js' %}">
-</script>
 {% endblock finalscript %}
 {% endblock %}
