--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -19,7 +19,7 @@
 
 <input type="hidden" id="experiment-id" value="{{ experiment.id }}">
 <input type="hidden" id="csrf-token" value="{{ csrf_token }}">
-
+{% render_bundle 'tardis_portal_view_experiment_init' %}
 {% endblock %}
 
 {% block content %}
